--- a/Assignment2.csproj
+++ b/Assignment2.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ModifyEvents.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModifyEvents.Designer.cs">
+      <DependentUpon>ModifyEvents.cs</DependentUpon>
+    </Compile>
     <Compile Include="User.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="f_AdminLogin.cs">
@@ -78,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="f_Events.resx">
       <DependentUpon>f_Events.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModifyEvents.resx">
+      <DependentUpon>ModifyEvents.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
