add UpdateEventStatusInFile function in connect data

--- a/Assignment2.csproj
+++ b/Assignment2.csproj
@@ -46,17 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="f_Details.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="f_Details.Designer.cs">
-      <DependentUpon>f_Details.cs</DependentUpon>
-    </Compile>
     <Compile Include="f_AvailableEvent.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="f_AvailableEvent.Designer.cs">
       <DependentUpon>f_AvailableEvent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="f_Details.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Details.Designer.cs">
+      <DependentUpon>f_Details.cs</DependentUpon>
     </Compile>
     <Compile Include="f_ModifyEvent.cs">
       <SubType>Form</SubType>
@@ -70,6 +70,7 @@
     <Compile Include="f_Ticket .Designer.cs">
       <DependentUpon>f_Ticket .cs</DependentUpon>
     </Compile>
+    <Compile Include="obj\Debug\.NETFramework,Version=v4.7.2.AssemblyAttributes.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="f_AdminLogin.cs">
@@ -94,17 +95,17 @@
     <Compile Include="IConnectData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="f_Details.resx">
-      <DependentUpon>f_Details.cs</DependentUpon>
+    <EmbeddedResource Include="f_AdminLogin.resx">
+      <DependentUpon>f_AdminLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_AvailableEvent.resx">
       <DependentUpon>f_AvailableEvent.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="f_AdminLogin.resx">
-      <DependentUpon>f_AdminLogin.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="f_CreateNewEvent.resx">
       <DependentUpon>f_CreateNewEvent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_Details.resx">
+      <DependentUpon>f_Details.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_Events.resx">
       <DependentUpon>f_Events.cs</DependentUpon>
@@ -112,6 +113,17 @@
     <EmbeddedResource Include="f_ModifyEvent.resx">
       <DependentUpon>f_ModifyEvent.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="f_Ticket .resx">
+      <DependentUpon>f_Ticket .cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="obj\Debug\Assignment2.AdminManagementForm.resources" />
+    <EmbeddedResource Include="obj\Debug\Assignment2.CreateNewEventForm.resources" />
+    <EmbeddedResource Include="obj\Debug\Assignment2.Events.resources" />
+    <EmbeddedResource Include="obj\Debug\Assignment2.f_Available_Events.resources" />
+    <EmbeddedResource Include="obj\Debug\Assignment2.f_Details.resources" />
+    <EmbeddedResource Include="obj\Debug\Assignment2.f_ModifyEvent.resources" />
+    <EmbeddedResource Include="obj\Debug\Assignment2.Properties.Resources.resources" />
+    <EmbeddedResource Include="obj\Debug\Assignment2.TicketForm.resources" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -121,9 +133,21 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="f_Ticket .resx">
-      <DependentUpon>f_Ticket .cs</DependentUpon>
-    </EmbeddedResource>
+    <None Include=".vs\Asm2\v17\.wsuo" />
+    <None Include=".vs\ass2_draft\v17\.wsuo" />
+    <None Include=".vs\Assignment2\FileContentIndex\322c0f6d-3179-427b-b6e6-d2c89be1ccfd.vsidx" />
+    <None Include=".vs\Assignment2\FileContentIndex\3cf8455c-e1df-4545-81dc-dd62c1700f88.vsidx" />
+    <None Include=".vs\Assignment2\FileContentIndex\bb483e28-587e-4508-986f-979e61a95a19.vsidx" />
+    <None Include=".vs\Assignment2\FileContentIndex\cb89c1cb-5696-4a6b-86d2-ec25984a08c5.vsidx" />
+    <None Include=".vs\Assignment2\FileContentIndex\d0921451-654a-435d-b41b-b4ebfeab5007.vsidx" />
+    <None Include=".vs\Assignment2\v17\.suo" />
+    <None Include=".vs\VSWorkspaceState.json" />
+    <None Include="bin\Debug\Assignment2.exe.config" />
+    <None Include="obj\Debug\Assignment2.csproj.AssemblyReference.cache" />
+    <None Include="obj\Debug\Assignment2.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\Assignment2.csproj.GenerateResource.cache" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferences.cache" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -136,6 +160,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\Assignment2.exe" />
+    <Content Include="bin\Debug\Assignment2.pdb" />
+    <Content Include="bin\Debug\Events.txt" />
+    <Content Include="bin\Debug\Users.txt" />
+    <Content Include="obj\Debug\Assignment2.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\Assignment2.exe" />
+    <Content Include="obj\Debug\Assignment2.pdb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
